# tosca

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  esp.yml  typos.yml
crates/tosca/: Cargo.toml
crates/tosca-controller/: Cargo.toml  README.md
crates/tosca-controller/examples/events-receiver/: Cargo.toml  README.md
crates/tosca-controller/examples/events-receiver-with-sse/: Cargo.toml  README.md
crates/tosca-controller/examples/events-receiver-with-sse/templates/: index.html
crates/tosca-controller/src/: controller.rs  device.rs  discovery.rs  error.rs  request.rs
crates/tosca-drivers/: Cargo.toml  README.md
crates/tosca-drivers/src/: am312.rs  bh1750.rs  ds18b20.rs
crates/tosca-esp32c3/: Cargo.toml  README.md
crates/tosca-esp32c3/examples/light/: Cargo.toml  README.md  rust-toolchain.toml
crates/tosca-esp32c3/examples/light-with-events/: Cargo.toml  README.md
crates/tosca-esp32c3/examples/light-with-events/src/: light.rs  main.rs
crates/tosca-esp32c3/examples/light-with-state/: Cargo.toml  README.md
crates/tosca-esp32c3/examples/light-with-state/src/: main.rs
crates/tosca-esp32c3/examples/light/src/: main.rs
crates/tosca-esp32c3/src/: parameters.rs  wifi.rs
crates/tosca-esp32c3/src/devices/: builder.rs  light.rs
crates/tosca-esp32c3/src/events/: mod.rs  topic.rs
crates/tosca-esp32c3/src/events/interrupt/: bool.rs  f32.rs  f64.rs  i32.rs  mod.rs  u8.rs
crates/tosca-esp32c3/src/events/periodic/: bool.rs  f32.rs  f64.rs  i32.rs  mod.rs  u8.rs
crates/tosca-os/: Cargo.toml  README.md
crates/tosca-os/examples/ip-camera/: Cargo.toml  README.md
crates/tosca-os/examples/light/: Cargo.toml  README.md
crates/tosca-os/src/: device.rs  error.rs  lib.rs  server.rs
crates/tosca-os/src/devices/: light.rs
crates/tosca-os/src/responses/: info.rs  mod.rs  stream.rs
crates/tosca-os/src/services/: mod.rs
crates/tosca/src/: device.rs  parameters.rs  route.rs
crates/tosca/src/macros/: mandatory_routes.rs  mod.rs
