[workspace]
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/tosca",
    "crates/tosca-os",
    "crates/tosca-controller",
    "crates/tosca-drivers",
]
exclude = ["crates/tosca-esp32c3"]

[workspace.package]
version = "0.1.0"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = "A versatile, customizable, and secure IoT framework."
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ToscaLabs/tosca"
categories = ["iot"]
keywords = ["iot", "framework", "library", "controller", "devices"]
rust-version = "1.90"
readme = "README.md"

[workspace.lints.clippy]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"

[workspace.dependencies]
hashbrown.version = "0.16"
hashbrown.default-features = false
hashbrown.features = ["default-hasher"]

indexmap.version = "2.12"
indexmap.default-features = false

mdns-sd.version = "0.17.0"
mdns-sd.default-features = false

serde.version = "1.0"
serde.default-features = false

serde_json.version = "1"
serde_json.default-features = false

tokio.version = "1.0"
tokio.default-features = false

tracing.version = "0.1"
tracing.default-features = false
