[package]
name = "tosca-os"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library for building Tosca firmware that runs on operating systems."
keywords = ["iot", "iot-library", "firmware", "operating-systems"]
documentation = "https://docs.rs/tosca-os"
readme = "README.md"
license.workspace = true
repository = "https://github.com/ToscaLabs/tosca/tree/master/crates/tosca-os"
rust-version.workspace = true

[features]
stream = ["dep:futures-core", "dep:tokio-util", "tosca/stream"]
default = ["stream"]

[dependencies]
tosca.path = "../tosca"
tosca.version = "0.1.0"
tosca.default-features = false

axum.version = "0.8.8"
axum.default-features = false
axum.features = ["tokio", "http1", "http2", "json"]

mdns-sd.workspace = true

serde.workspace = true
serde.features = ["derive"]

serde_json.workspace = true

tokio.workspace = true

tracing.workspace = true

# Stream feature dependencies
futures-core.version = "0.3" # Just for the TryStream trait
futures-core.default-features = false
futures-core.optional = true

tokio-util.version = "0.7"
tokio-util.default-features = false
tokio-util.features = ["io"]
tokio-util.optional = true

[target.'cfg(windows)'.dependencies]
windows-sys.version = "0.61.0"
windows-sys.features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"]

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]
