[package]
name = "tosca"
version.workspace = true
edition.workspace = true
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
keywords = ["iot", "interface", "data"]
description = "A library for interfacing a controller with a device."
documentation = "https://docs.rs/tosca"
readme.workspace = true
license.workspace = true

[features]
stream = []
deserialize = []
default = ["deserialize"]

[dependencies]
hashbrown.workspace = true

indexmap.workspace = true
indexmap.features = ["serde"]

log.version = "0.4.29"

serde.workspace = true
serde.features = ["derive", "alloc"]

serde_json.workspace = true
serde_json.features = ["alloc"]

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]
