[package]
name = "ip-camera"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = "An ip-camera implemented with the tosca-os crate."
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
tosca.path = "../../../tosca"
tosca.version = "0.1"

tosca-os.path = "../../"
tosca-os.version = "0.1"

clap.version = "4.5"
clap.features = ["derive"]

image.version = "0.25"
image.default-features = false
image.features = ["png"]

nokhwa.version = "0.10"
nokhwa.default-features = false
nokhwa.features = ["input-native", "serialize", "output-threaded"]

serde.version = "1.0"
serde.default-features = false
serde.features = ["derive"]

thiserror.version = "2.0.17"

tokio.version = "1.0"
tokio.default-features = false
tokio.features = ["rt", "rt-multi-thread"]

tokio-stream.version = "0.1"
tokio-stream.default-features = false

tracing.version = "0.1"
tracing.default-features = false

tracing-subscriber.version = "0.3"
tracing-subscriber.default-features = false
tracing-subscriber.features = ["ansi", "fmt"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"

[workspace]
