[package]
name = "light"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <michele.valsesia@toscalabs.org>"]
description = "A light implemented with the tosca-os crate."
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
tosca.path = "../../../tosca"
tosca.version = "0.1"
tosca.default-features = false

tosca-os.path = "../../"
tosca-os.version = "0.1"
tosca-os.default-features = false

clap.version = "4.5"
clap.features = ["derive"]

serde.version = "1.0"
serde.default-features = false
serde.features = ["derive"]

tokio.version = "1.0"
tokio.default-features = false
tokio.features = ["rt", "rt-multi-thread"]

tracing-subscriber.version = "0.3"
tracing-subscriber.default-features = false
tracing-subscriber.features = ["ansi", "fmt"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"

[workspace]
